syntax = "proto3";

package secret;

option go_package = "./proto;secret";

service Secret {
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Set(SetRequest) returns (SetResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
}

// Get a secret by key.
message GetRequest {
	// The key to retrieve
	string key = 1;
	// Optional path
	string path = 2;
}

message GetResponse {
	// The key e.g foo
	string key = 1;
	// Path of value e.g bar/baz
	string path = 2;
	// The value e.g cat
	string value = 3;
	// time of creation
	string created = 4;
	// time of update
	string updated = 5;
}

// Set a secret. Overwrites any existing value already set.
message SetRequest {
	// The key to update
	string key = 1;
	// Optional path e.g bar/baz
	string path = 2;
	// The value to set
	string value = 3;
}

message SetResponse {
}

// Delete a secret. If key not found a success response is returned.
message DeleteRequest {
	// The key to delete
	string key = 1;
	// Optional path
	string path = 2;
}

message DeleteResponse {
}

// List all the available secrets
message ListRequest {
}

message ListResponse {
	repeated string keys = 1;
}
